know me section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,24 @@
   <main>
 
     <!-- KNOW ME SECTION -->
-    <section id="know-me"></section>
+    <section class="container" id="know-me" >
+
+      <div class="row justify-content-center align-items-center">
+
+        <div class="col-lg-6 text-start know-me-area">
+          <h2>Know me</h2>
+          <p>Hey there! Let me introduce myself. I'm Cristian, a junior developer with a passion for <span class="span-orange"> agile development</span>. I mainly work on  backend projects using <span class="span-orange">Java</span> , but I'm also pretty into web development, where I have a blast creating cool websites with <span class="span-orange">JavaScript</span> . I'm always stoked about learning new stuff and diving into exciting projects that challenge and expand my skills.</p>
+        </div>
+
+        <div class="col-lg-6 justify-content-center know-me-avatar">
+          <figure>
+            <img src="./img/avatar.png" alt="my avatar">
+          </figure>
+        </div>
+
+      </div>
+
+    </section>
 
     <!-- TECHNOLOGIES SECTION -->
     <section id="technologies"></section>
