just left content

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       <!-- PROJECTS SECTION -->
       <section class="container" id="projects">
         <div class="row">
-          <article class="col-lg-5">
+          <article class="col-lg-5 p-4">
             <!-- PRESENTATION CARD -->
             <div class="card-project">
               <div class="card-project-content">
