apply nesting at every thing

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <section class="container" id="know-me">
       <div class="row justify-content-center align-items-center">
         <div class="col-lg-6 text-start know-me-area">
-          <h2>Know me</h2>
+          <h2>Know <span>Me</span></h2>
           <p>
             Hey there! Let me introduce myself. I'm Cristian, a junior
             developer with a passion for
@@ -135,17 +135,11 @@
     <section class="container" id="technologies">
       <div class="row">
         <div class="col-lg-12">
+
           <h2>Technologies</h2>
           <div class="tech-center">
+
             <div class="technologies-container autoplay-r">
-              <div class="mx-4 d-flex justify-content-center align-items-center autoplay">
-                <div class="card-tech">
-                  <div class="tech-content">
-                    <img src="./img/tecnologies/java.svg" alt="java" />
-                    <h3>JAVA</h3>
-                  </div>
-                </div>
-              </div>
 
               <div class="mx-4 d-flex justify-content-center align-items-center autoplay">
                 <div class="card-tech">
@@ -156,68 +150,7 @@
                 </div>
               </div>
 
-              <div class="mx-4 d-flex justify-content-center align-items-center autoplay">
-                <div class="card-tech">
-                  <div class="tech-content">
-                    <img src="./img/tecnologies/java.svg" alt="java" />
-                    <h3>JAVA</h3>
-                  </div>
-                </div>
-              </div>
-
-              <div class="mx-4 d-flex justify-content-center align-items-center autoplay">
-                <div class="card-tech">
-                  <div class="tech-content">
-                    <img src="./img/tecnologies/java.svg" alt="java" />
-                    <h3>JAVA</h3>
-                  </div>
-                </div>
-              </div>
-
-              <div class="mx-4 d-flex justify-content-center align-items-center autoplay">
-                <div class="card-tech">
-                  <div class="tech-content">
-                    <img src="./img/tecnologies/java.svg" alt="java" />
-                    <h3>JAVA</h3>
-                  </div>
-                </div>
-              </div>
-
-              <div class="mx-4 d-flex justify-content-center align-items-center autoplay">
-                <div class="card-tech">
-                  <div class="tech-content">
-                    <img src="./img/tecnologies/java.svg" alt="java" />
-                    <h3>JAVA</h3>
-                  </div>
-                </div>
-              </div>
-
-              <div class="mx-4 d-flex justify-content-center align-items-center autoplay">
-                <div class="card-tech">
-                  <div class="tech-content">
-                    <img src="./img/tecnologies/java.svg" alt="java" />
-                    <h3>JAVA</h3>
-                  </div>
-                </div>
-              </div>
-
-              <div class="mx-4 d-flex justify-content-center align-items-center autoplay">
-                <div class="card-tech">
-                  <div class="tech-content">
-                    <img src="./img/tecnologies/java.svg" alt="java" />
-                    <h3>JAVA</h3>
-                  </div>
-                </div>
-              </div>
-
-              <div class="mx-4 d-flex justify-content-center align-items-center autoplay">
-                <div class="card-tech">
-                  <div class="tech-content">
-                    <img src="./img/tecnologies/java.svg" alt="java" />
-                    <h3>JAVA</h3>
-                  </div>
-                </div>
-              </div>
+          
             </div>
           </div>
         </div>
