--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Know me</a>
+              <a class="nav-link" aria-current="page" href="#know-me">Know me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Technologies</a>
+              <a class="nav-link" href="#technologies">Technologies</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true">Contact</a>
+              <a class="nav-link" aria-disabled="true" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -86,21 +86,26 @@
       </div>
     </nav>
 
+
     <!-- Hero -->
-    <div class="center-class">
-      <div class="my-hero container">
+    <div class="home-hero">
+      <div class="my-hero">
+
         <h2>
           Hi there, I'm <br />
           <span id="name"> Cristian Lopez</span>
         </h2>
-
+  
         <h1>
           I'm a <span>Backend Developer</span> eager to improve my skills
         </h1>
-
+  
         <button>Download CV</button>
       </div>
     </div>
+ 
+
+
   </header>
 
   <!-- MAIN  -->
@@ -134,99 +139,86 @@
     <!-- TECHNOLOGIES SECTION -->
     <section class="container" id="technologies">
 
-      <h2>Technologies</h2>
+      <h2>Technologies & Tools</h2>
 
-      <div class="row">
-        <article class="col-lg-10 mx-auto">
+      <div class="my-row">
 
-          <div class="row">
+        <div class="card-tech-container">
+          <figure class="tech-card">
+            <img src="./img/tecnologies/java.svg" alt="java">
+            <caption>Java</caption>
+          </figure>
+        </div>
 
-            <div class="col-lg-2 card-tech-container">
-              <figure class="tech-card">
-                <img src="./img/tecnologies/java.svg" alt="java">
-                <caption>Java</caption>
-              </figure>
-            </div>
+        <div class=" card-tech-container">
+          <figure class="tech-card">
+            <img src="./img/tecnologies/javascript.svg" alt="javascript">
+            <caption>JavaScript</caption>
+          </figure>
+        </div>
 
-            <div class="col-lg-2 card-tech-container">
-              <figure class="tech-card">
-                <img src="./img/tecnologies/javascript.svg" alt="javascript">
-                <caption>JavaScript</caption>
-              </figure>
-            </div>
+        <div class=" card-tech-container">
+          <figure class="tech-card">
+            <img src="./img/tecnologies/php.svg" alt="php">
+            <caption>PHP</caption>
+          </figure>
+        </div>
 
-            <div class="col-lg-2 card-tech-container">
-              <figure class="tech-card">
-                <img src="./img/tecnologies/php.svg" alt="php">
-                <caption>PHP</caption>
-              </figure>
-            </div>
+        <div class=" card-tech-container">
+          <figure class="tech-card">
+            <img src="./img/tecnologies/github.svg" alt="github">
+            <caption>GtiHub</caption>
+          </figure>
+        </div>
 
-            <div class="col-lg-2 card-tech-container">
-              <figure class="tech-card">
-                <img src="./img/tecnologies/github.svg" alt="github">
-                <caption>GtiHub</caption>
-              </figure>
-            </div>
+        <div class=" card-tech-container">
+          <figure class="tech-card">
+            <img src="./img/tecnologies/mysql.svg" alt="mysql">
+            <caption>MySQL</caption>
+          </figure>
+        </div>
 
-            <div class="col-lg-2 card-tech-container">
-              <figure class="tech-card">
-                <img src="./img/tecnologies/mysql.svg" alt="mysql">
-                <caption>MySQL</caption>
-              </figure>
-            </div>
-
-          </div>
-
-          <div class="row ">
-
-            <div class="col-lg-2 card-tech-container">
-              <figure class="tech-card">
-                <img src="./img/tecnologies/spring.svg" alt="spring">
-                <caption>Spring</caption>
-              </figure>
-            </div>
+        <div class=" card-tech-container">
+          <figure class="tech-card">
+            <img src="./img/tecnologies/spring.svg" alt="spring">
+            <caption>Spring</caption>
+          </figure>
+        </div>
 
 
-            <div class="col-lg-2 card-tech-container">
-              <figure class="tech-card">
-                <img src="./img/tecnologies/react.svg" alt="React">
-                <caption>React</caption>
-              </figure>
-            </div>
+        <div class=" card-tech-container">
+          <figure class="tech-card">
+            <img src="./img/tecnologies/react.svg" alt="React">
+            <caption>React</caption>
+          </figure>
+        </div>
 
 
-            <div class="col-lg-2 card-tech-container">
-              <figure class="tech-card">
-                <img src="./img/tecnologies/docker.svg" alt="Docker">
-                <caption>Docker</caption>
-              </figure>
-            </div>
+        <div class=" card-tech-container">
+          <figure class="tech-card">
+            <img src="./img/tecnologies/docker.svg" alt="Docker">
+            <caption>Docker</caption>
+          </figure>
+        </div>
 
-            <div class="col-lg-2 card-tech-container">
-              <figure class="tech-card">
-                <img src="./img/tecnologies/css.svg" alt="Css">
-                <caption>Css</caption>
-              </figure>
-            </div>
+        <div class=" card-tech-container">
+          <figure class="tech-card">
+            <img src="./img/tecnologies/css.svg" alt="Css">
+            <caption>Css</caption>
+          </figure>
+        </div>
 
 
 
 
-            <div class="col-lg-2 card-tech-container">
-              <figure class="tech-card">
-                <img src="./img/tecnologies/mongodb.svg" alt="MongoDB">
-                <caption>MongoDB</caption>
-              </figure>
-            </div>
+        <div class=" card-tech-container">
+          <figure class="tech-card">
+            <img src="./img/tecnologies/mongodb.svg" alt="MongoDB">
+            <caption>MongoDB</caption>
+          </figure>
+        </div>
 
 
-
-
-
-          </div>
-
-        </article>
       </div>
 
     </section>
@@ -265,10 +257,13 @@
           <section class="project-list">
 
             <article class="my-project-card">
-              <header>
-                <h3>Project</h3>
-                <p>Project description</p>
-              </header>
+             
+                <h3>API-MED</h3>
+                <p>
+                  This project is developed using Java and Spring Boot, employing a <span class="span-orange">REST architecture</span> . It features robust security with JSON Web Token <span class="span-pink">(JWT)</span>  implementation and showcases my first experience with Data Transfer Objects (DTOs)."
+                </p>
+                <a href="https://github.com/CristianLopez3/SpringBootApi" target="_blank">Go repo</a>
+        
             </article>
 
             <article class="my-project-card">
@@ -335,7 +330,7 @@
           <div class="social-net">
 
             <div class="red">
-              <a href="#">
+              <a href="gmail.com">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_181_335)">
                     <path
@@ -358,11 +353,10 @@
                   </defs>
                 </svg>
               </a>
-
             </div>
 
             <div class="content">
-              <a href="#">
+              <a href="gmail.com">
                 <h3>cristian.c.lopez.m@gmail.com</h3>
               </a>
             </div>
@@ -384,7 +378,7 @@
             </div>
 
             <div class="content">
-              <a href="#">
+              <a href="https://github.com/CristianLopez3">
                 <h3>@CristianLopez3</h3>
               </a>
             </div>
