fixed project cards

--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
           Hi there, I'm <br />
           <span id="name"> Cristian Lopez</span>
         </h2>
-  
+
         <h1>
           I'm a <span>Backend Developer</span> eager to improve my skills
         </h1>
-  
-        <button>Download CV</button>
+
+        <button id="download">Download CV</button>
       </div>
     </div>
- 
+
 
 
   </header>
@@ -257,50 +257,51 @@
           <section class="project-list">
 
             <article class="my-project-card">
-             
-                <h3>API-MED</h3>
-                <p>
-                  This project is developed using Java and Spring Boot, employing a <span class="span-orange">REST architecture</span> . It features robust security with JSON Web Token <span class="span-pink">(JWT)</span>  implementation and showcases my first experience with Data Transfer Objects (DTOs)."
-                </p>
-                <a href="https://github.com/CristianLopez3/SpringBootApi" target="_blank">Go repo</a>
-        
+              <h3 class="orange">API-MED</h3>
+              <p>
+                This project is developed using Java and Spring Boot, employing a <span class="span-orange">REST
+                  architecture</span> . It features robust security with JSON Web Token <span
+                  class="span-pink">(JWT)</span> implementation and showcases my first experience with Data Transfer
+                Objects (DTOs)."
+              </p>
+              <a href="https://github.com/CristianLopez3/SpringBootApi" target="_blank">Go repo</a>
             </article>
 
             <article class="my-project-card">
-              <header>
-                <h3>Project</h3>
-                <p>Project description</p>
-              </header>
-            </article>
-
-            <article class="my-project-card">
-              <header>
-                <h3>Project</h3>
-                <p>Project description</p>
-              </header>
-            </article>
-
-            <article class="my-project-card">
-              <header>
-                <h3>Project</h3>
-                <p>Project description</p>
-              </header>
+              <h3 class="pink">Encrypt Challenge</h3>
+              <p>This project, <span class="span-pink">"Challenger Encriptador,"</span> is developed using JavaScript,
+                HTML, and CSS. It demonstrates the implementation of the Document Object Model (DOM) and <span
+                  class="span-orange">reponsive design.</span></p>
+              <a href="https://github.com/CristianLopez3/challenger-encriptador" target="_blank">Go repo</a>
             </article>
 
 
             <article class="my-project-card">
-              <header>
-                <h3>Project</h3>
-                <p>Project description</p>
-              </header>
+              <h3 class="orange">Java Calculator</h3>
+              <p>A basic calculator developed in Java using <span class="span-orange">Java Swing</span> for the user
+                interface and following the principles of <span class="span-pink">object-oriented programming
+                  (OOP)</span> to organize and manage the calculation logic to provide a basic math functions.</p>
+              <a href="https://github.com/CristianLopez3/Basic-Calculator-Java" target="_blank">Go repo</a>
             </article>
 
             <article class="my-project-card">
-              <header>
-                <h3>Project</h3>
-                <p>Project description</p>
-              </header>
+              <h3 class="pink">Sena Soft</h3>
+              <p> RESTful API developed in Java using Spring Boot, specifically crafted for the <span
+                  class="span-pink">Senasoft Hackathon</span>.This API implements features as JWT and DTO. It's designed
+                to meet the unique <span class="span-orange">challenges and requirements</span> of the Senasoft
+                Hackathon, providing a solid foundation for a successful project.</p>
+              <a href="https://github.com/CristianLopez3/SENASOFT-BYTE-BANDITS/settings" target="_blank">Go repo</a>
             </article>
+
+            <article class="my-project-card">
+              <h3 class="orange">Real State </h3>
+              <p>An object-oriented Real Estate Management System developed in <span class="span-pink">PHP</span> with a
+                MySQL database. The project follows a <span class="span-orange">"mobile-first"</span> design approach,
+                ensuring a user-friendly and responsive experience on various devices.</p>
+              <a href="https://github.com/CristianLopez3/Real-estate" target="_blank">Go repo</a>
+            </article>
+
+
 
 
 
