update links to social network and swap order sections

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <!-- HEADER  -->
-  <header class="container" id="header" data-aos="zoom-in"  data-aos-duration="1300" >
+  <header class="container" id="header" >
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
@@ -77,7 +77,7 @@
         </a>
 
         <!-- LINKEDIN ICON -->
-        <a class="navbar-brand gap" href="#">
+        <a class="navbar-brand gap" href="https://www.linkedin.com/in/cristian-lopez-software/">
           <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M37.0391 0H2.95312C1.32031 0 0 1.28906 0 2.88281V37.1094C0 38.7031 1.32031 40 2.95312 40H37.0391C38.6719 40 40 38.7031 40 37.1172V2.88281C40 1.28906 38.6719 0 37.0391 0ZM11.8672 34.0859H5.92969V14.9922H11.8672V34.0859ZM8.89844 12.3906C6.99219 12.3906 5.45312 10.8516 5.45312 8.95312C5.45312 7.05469 6.99219 5.51562 8.89844 5.51562C10.7969 5.51562 12.3359 7.05469 12.3359 8.95312C12.3359 10.8438 10.7969 12.3906 8.89844 12.3906ZM34.0859 34.0859H28.1562V24.8047C28.1562 22.5938 28.1172 19.7422 25.0703 19.7422C21.9844 19.7422 21.5156 22.1562 21.5156 24.6484V34.0859H15.5938V14.9922H21.2812V17.6016H21.3594C22.1484 16.1016 24.0859 14.5156 26.9688 14.5156C32.9766 14.5156 34.0859 18.4688 34.0859 23.6094V34.0859Z"
@@ -114,7 +114,7 @@
 
 
     <!-- TECHNOLOGIES SECTION -->
-    <section class="container" id="technologies" data-aos="zoom-in-down"   data-aos-duration="1300" >
+    <section class="container" id="technologies" data-aos="zoom-in-down"   data-aos-duration="1500" >
 
       <h2>Technologies & Tools</h2>
 
@@ -201,7 +201,7 @@
     </section>
 
         <!-- KNOW ME SECTION -->
-        <section class="container" id="know-me" data-aos="zoom-in-up"  data-aos-duration="1300"  >
+    <section class="container" id="know-me" data-aos="zoom-in-up"  data-aos-duration="1500"  >
           <div class="row justify-content-center align-items-center">
             <article class="col-lg-6 text-start know-me-area">
               <h2>Know <span>Me</span></h2>
@@ -224,10 +224,10 @@
               </figure>
             </article>
           </div>
-        </section>
+    </section>
 
     <!-- PROJECTS SECTION -->
-    <section class="container" id="projects" data-aos="zoom-in-right"  data-aos-duration="1300"  >
+    <section class="container" id="projects" data-aos="zoom-in-right"  data-aos-duration="1500"  >
       <div class="row">
         <article class="col-lg-5 p-4">
           <!-- PRESENTATION CARD -->
@@ -315,7 +315,7 @@
     </section>
 
     <!-- CONTACT SECTION -->
-    <section class="container" id="contact" data-aos="zoom-in-left"  data-aos-duration="1300"  >
+    <section class="container" id="contact" data-aos="zoom-in-left"  data-aos-duration="1500"  >
       <div class="row">
 
         <article class="col-lg-6 col-md-6 col-sm-12 left">
@@ -420,8 +420,8 @@
   </main>
 
   <!-- FOOTER  -->
-  <footer class="container " data-aos="zoom-in-up"  data-aos-duration="1300"  >
-    <p>&copy; Copyright by Cristian Camilo Lopez Martinez </p>
+  <footer class="container " data-aos="zoom-in-up"  data-aos-duration="1500"  >
+    <p>&copy; <span class="span-orange">Copyright</span> by Cristian Camilo Lopez Martinez - <span class="span-pink">MIT</span> License</p>
   </footer>
 
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
