add link to readme

--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
 
             <article class="my-project-card">
               <h3 class="pink">Sena Soft</h3>
-              <p> RESTful API developed in Java using Spring Boot, specifically crafted for the <span
-                  class="span-pink">Senasoft Hackathon</span>.This API implements features as JWT and DTO. It's designed
-                to meet the unique <span class="span-orange">challenges and requirements</span> of the Senasoft
+              <p> RESTful API developed in Java using Spring Boot, specifically crafted for the this<span
+                  class="span-pink"> Hackathon</span>.This API implements features as JWT and DTO. It's designed
+                to meet the unique <span class="span-orange"> requirements</span> of the Senasoft
                 Hackathon, providing a solid foundation for a successful project.</p>
               <a href="https://github.com/CristianLopez3/SENASOFT-BYTE-BANDITS/settings" target="_blank">Go repo</a>
             </article>
